--- a/v01/docker-compose.yml
+++ b/v01/docker-compose.yml
@@ -28,18 +28,17 @@ services:
             - wekan-tier
         ports:
             - 80:8080
-        env_file:
-            - .env
- #   environment:
- #     - MONGO_URL=mongodb://wekandb:27017/wekan
- #     - ROOT_URL=http://localhost
- #     - MAIL_URL=smtp://<mail_url>:25/?ignoreTLS=true&tls={rejectUnauthorized:false}
- #     - MAIL_FROM=Wekan Notifications <noreply.wekan@mydomain.com>
- #     - WITH_API=true
- #     - RICHER_CARD_COMMENT_EDITOR=false
- #     - CARD_OPENED_WEBHOOK_ENABLED=false
- #     - BIGEVENTS_PATTERN=NONE
- #     - BROWSER_POLICY_ENABLED=true
+
+    environment:
+      - MONGO_URL: mongodb://wekandb:27017/wekan
+      - ROOT_URL: http://localhost
+      - MAIL_URL: smtp://<mail_url>:25/?ignoreTLS=true&tls={rejectUnauthorized:false}
+      - MAIL_FROM: Wekan Notifications <noreply.wekan@mydomain.com>
+      - WITH_API: true
+      - RICHER_CARD_COMMENT_EDITOR: false
+      - CARD_OPENED_WEBHOOK_ENABLED: false
+      - BIGEVENTS_PATTERN: NONE
+      - BROWSER_POLICY_ENABLED: true
         depends_on:
             - wekandb
 
